--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
   @tailwind components;
   @tailwind utilities;
 
+  *, html {
+
+    scroll-behavior: smooth !important;
+}
+
   @layer base {
     :root {
       --background: 0 0% 100%;
